--- a/MitologiaGriega.html
+++ b/MitologiaGriega.html
@@ -34,21 +34,141 @@
                 mundo mortal.</p>
             <img src="./images/zeus.jpg" class="imagen-principal" alt="Zeus" />
             <p>
-                Mitología Griega: Introducción
-                La mitología griega es una de las más influyentes de la historia, con relatos que explican el origen del
-                mundo, la vida y la naturaleza humana. Basada en un vasto panteón de dioses olímpicos liderados por
-                Zeus,
-                estas historias fueron plasmadas en obras como la Ilíada y la Odisea. Los griegos creían en la
-                intervención
-                de los dioses en los asuntos humanos y en la existencia de criaturas legendarias, héroes épicos y
-                relatos
-                que dieron forma a su cosmovisión.
+            <h4 id="Introduccion">Introducción </h4>
+            La mitología griega es una de las más influyentes de la historia, con relatos que explican el origen del
+            mundo, la vida y la naturaleza humana. Basada en un vasto panteón de dioses olímpicos liderados por
+            Zeus,
+            estas historias fueron plasmadas en obras como la Ilíada y la Odisea. Los griegos creían en la
+            intervención
+            de los dioses en los asuntos humanos y en la existencia de criaturas legendarias, héroes épicos y
+            relatos
+            que dieron forma a su cosmovisión.
+            </p>
+            <p>
+            <h4 id="Dioses">Principales Dioses y Diosas </h4>
+            Los dioses griegos eran antropomórficos y poseían características humanas, con virtudes y defectos. Entre
+            los más importantes destacan: <br>
+
+            <b>Zeus:</b> Dios del cielo y el trueno, rey del Olimpo. <br>
+            <br>
+            <img src="./images/zeus.jpg" class="imagen-principal" alt="Zeus"> <br> <br>
+
+            <b>Hera:</b> Diosa del matrimonio y la familia, esposa de Zeus. <br>
+            <br>
+            <img src="./images/zeus.jpg" class="imagen-principal" alt="Zeus"> <br> <br>
+
+            <b>Poseidón:</b> Dios del mar y los terremotos. <br>
+            <br>
+            <img src="./images/zeus.jpg" class="imagen-principal" alt="Zeus"> <br> <br>
+
+            <b>Hades:</b> Dios del inframundo y los muertos. <br>
+            <br>
+            <img src="./images/zeus.jpg" class="imagen-principal" alt="Zeus"> <br> <br>
+
+            <b>Atenea:</b> Diosa de la sabiduría y la estrategia. <br>
+            <br>
+            <img src="./images/zeus.jpg" class="imagen-principal" alt="Zeus"> <br> <br>
+
+            <b>Apolo:</b> Dios del sol, la música y la profecía. <br>
+            <br>
+            <img src="./images/zeus.jpg" class="imagen-principal" alt="Zeus"> <br> <br>
+
+            <b>Artemisa:</b> Diosa de la caza y la naturaleza. <br>
+            <br>
+            <img src="./images/zeus.jpg" class="imagen-principal" alt="Zeus"> <br> <br>
+
+            <b>Afrodita:</b> Diosa del amor y la belleza. <br>
+            <br>
+            <img src="./images/zeus.jpg" class="imagen-principal" alt="Zeus"> <br> <br>
+
+            <b>Ares:</b> Dios de la guerra. <br>
+            <br>
+            <img src="./images/zeus.jpg" class="imagen-principal" alt="Zeus"> <br> <br>
+
+            <b>Dionisio:</b> Dios del vino y el éxtasis. <br>
+            <br>
+            <img src="./images/zeus.jpg" class="imagen-principal" alt="Zeus"> <br> <br>
+
+            <b>Hermes:</b> Mensajero de los dioses, protector de viajeros y comerciantes. <br>
+            <br>
+            <img src="./images/zeus.jpg" class="imagen-principal" alt="Zeus"> <br> <br>
+            </p>
+            <p>
+            <h4 id="CriaturasYSeres">Criaturas y Seres Mitologicos </h4>
+            Los mitos griegos están llenos de seres fantásticos, como: <br>
+
+            Minotauro: Mitad hombre, mitad toro, habitante del laberinto de Creta. <br>
+
+            Cíclopes: Gigantes de un solo ojo, forjadores de las armas divinas.  <br>
+
+            Medusa: Gorgona con serpientes en la cabeza, capaz de petrificar con la mirada. <br>
+
+            Quimera: Criatura con cabeza de león, cuerpo de cabra y cola de serpiente. <br>
+
+            Hidra de Lerna: Serpiente de múltiples cabezas que se regeneraban al ser cortadas. <br>
+
+            Pegaso: Caballo alado nacido de la sangre de Medusa.
+            </p>
+            <p>
+            <h4 id="HeroesYLeyendas">Heroes y Leyendas</h4>
+            La mitología griega es una de las más influyentes de la historia, con relatos que explican el origen del
+            mundo, la vida y la naturaleza humana. Basada en un vasto panteón de dioses olímpicos liderados por
+            Zeus,
+            estas historias fueron plasmadas en obras como la Ilíada y la Odisea. Los griegos creían en la
+            intervención
+            de los dioses en los asuntos humanos y en la existencia de criaturas legendarias, héroes épicos y
+            relatos
+            que dieron forma a su cosmovisión.
+            </p>
+            <p>
+            <h4 id="MitosYRelatos">Mitos y Relatos</h4>
+            La mitología griega es una de las más influyentes de la historia, con relatos que explican el origen del
+            mundo, la vida y la naturaleza humana. Basada en un vasto panteón de dioses olímpicos liderados por
+            Zeus,
+            estas historias fueron plasmadas en obras como la Ilíada y la Odisea. Los griegos creían en la
+            intervención
+            de los dioses en los asuntos humanos y en la existencia de criaturas legendarias, héroes épicos y
+            relatos
+            que dieron forma a su cosmovisión.
+            </p>
+            <p>
+            <h4 id="SimbolosYArtefactos">Simbolos y Artefactos Sagrados</h4>
+            La mitología griega es una de las más influyentes de la historia, con relatos que explican el origen del
+            mundo, la vida y la naturaleza humana. Basada en un vasto panteón de dioses olímpicos liderados por
+            Zeus,
+            estas historias fueron plasmadas en obras como la Ilíada y la Odisea. Los griegos creían en la
+            intervención
+            de los dioses en los asuntos humanos y en la existencia de criaturas legendarias, héroes épicos y
+            relatos
+            que dieron forma a su cosmovisión.
+            </p>
+            <p>
+            <h4 id="LugaresYCosmologia">Lugares Miticos y Cosmología</h4>
+            La mitología griega es una de las más influyentes de la historia, con relatos que explican el origen del
+            mundo, la vida y la naturaleza humana. Basada en un vasto panteón de dioses olímpicos liderados por
+            Zeus,
+            estas historias fueron plasmadas en obras como la Ilíada y la Odisea. Los griegos creían en la
+            intervención
+            de los dioses en los asuntos humanos y en la existencia de criaturas legendarias, héroes épicos y
+            relatos
+            que dieron forma a su cosmovisión.
+            </p>
+            <p>
+            <h4 id="HeroesYLeyendas">Influencia en la Cultura Actual</h4>
+            La mitología griega es una de las más influyentes de la historia, con relatos que explican el origen del
+            mundo, la vida y la naturaleza humana. Basada en un vasto panteón de dioses olímpicos liderados por
+            Zeus,
+            estas historias fueron plasmadas en obras como la Ilíada y la Odisea. Los griegos creían en la
+            intervención
+            de los dioses en los asuntos humanos y en la existencia de criaturas legendarias, héroes épicos y
+            relatos
+            que dieron forma a su cosmovisión.
             </p>
         </section>
         <aside class="sidebar">
             <h3>Artículos Recientes</h3>
             <ul>
-                <li><a href="#">La influencia de la mitología en la cultura popular</a></li>
+                <li><a href="#Introduccion">La influencia de la mitología en la cultura popular</a></li>
                 <li><a href="#">Los dioses y héroes de la mitología griega</a></li>
                 <li><a href="#">Los mitos nórdicos y su impacto en la literatura</a></li>
                 <li><a href="#">La mitología egipcia y sus misterios</a></li>
