--- a/MitologiaJaponesa.html
+++ b/MitologiaJaponesa.html
@@ -26,7 +26,7 @@
     </nav>
     <main>
         <section id="griega" class="principal">
-            <h2>Mitología Japonesa</h2>
+            <h2>Mitología Griega</h2>
             <p>La mitología griega está llena de historias fascinantes sobre dioses y héroes. Algunos de los dioses más
                 conocidos son Zeus, Atenea, y Apolo.</p>
             <p>Por ejemplo, Zeus es el dios del cielo y el rey de los dioses, conocido por su poder y su influencia
@@ -34,7 +34,84 @@
                 mundo mortal.</p>
             <img src="./images/zeus.jpg" class="imagen-principal" alt="Zeus" />
             <p>
-                Mitología Griega: Introducción
+                <h4 id="Introduccion">Introducción </h4>
+                La mitología griega es una de las más influyentes de la historia, con relatos que explican el origen del
+                mundo, la vida y la naturaleza humana. Basada en un vasto panteón de dioses olímpicos liderados por
+                Zeus,
+                estas historias fueron plasmadas en obras como la Ilíada y la Odisea. Los griegos creían en la
+                intervención
+                de los dioses en los asuntos humanos y en la existencia de criaturas legendarias, héroes épicos y
+                relatos
+                que dieron forma a su cosmovisión.
+            </p>
+            <p>
+                <h4 id="Dioses">Principales Dioses y Diosas </h4>
+                La mitología griega es una de las más influyentes de la historia, con relatos que explican el origen del
+                mundo, la vida y la naturaleza humana. Basada en un vasto panteón de dioses olímpicos liderados por
+                Zeus,
+                estas historias fueron plasmadas en obras como la Ilíada y la Odisea. Los griegos creían en la
+                intervención
+                de los dioses en los asuntos humanos y en la existencia de criaturas legendarias, héroes épicos y
+                relatos
+                que dieron forma a su cosmovisión.
+            </p>
+            <p>
+                <h4 id="CriaturasYSeres">Criaturas y Seres Mitologicos </h4>
+                La mitología griega es una de las más influyentes de la historia, con relatos que explican el origen del
+                mundo, la vida y la naturaleza humana. Basada en un vasto panteón de dioses olímpicos liderados por
+                Zeus,
+                estas historias fueron plasmadas en obras como la Ilíada y la Odisea. Los griegos creían en la
+                intervención
+                de los dioses en los asuntos humanos y en la existencia de criaturas legendarias, héroes épicos y
+                relatos
+                que dieron forma a su cosmovisión.
+            </p>
+            <p>
+                <h4 id="HeroesYLeyendas">Heroes y Leyendas</h4>
+                La mitología griega es una de las más influyentes de la historia, con relatos que explican el origen del
+                mundo, la vida y la naturaleza humana. Basada en un vasto panteón de dioses olímpicos liderados por
+                Zeus,
+                estas historias fueron plasmadas en obras como la Ilíada y la Odisea. Los griegos creían en la
+                intervención
+                de los dioses en los asuntos humanos y en la existencia de criaturas legendarias, héroes épicos y
+                relatos
+                que dieron forma a su cosmovisión.
+            </p>
+            <p>
+                <h4 id="MitosYRelatos">Mitos y Relatos</h4>
+                La mitología griega es una de las más influyentes de la historia, con relatos que explican el origen del
+                mundo, la vida y la naturaleza humana. Basada en un vasto panteón de dioses olímpicos liderados por
+                Zeus,
+                estas historias fueron plasmadas en obras como la Ilíada y la Odisea. Los griegos creían en la
+                intervención
+                de los dioses en los asuntos humanos y en la existencia de criaturas legendarias, héroes épicos y
+                relatos
+                que dieron forma a su cosmovisión.
+            </p>
+            <p>
+                <h4 id="SimbolosYArtefactos">Simbolos y Artefactos Sagrados</h4>
+                La mitología griega es una de las más influyentes de la historia, con relatos que explican el origen del
+                mundo, la vida y la naturaleza humana. Basada en un vasto panteón de dioses olímpicos liderados por
+                Zeus,
+                estas historias fueron plasmadas en obras como la Ilíada y la Odisea. Los griegos creían en la
+                intervención
+                de los dioses en los asuntos humanos y en la existencia de criaturas legendarias, héroes épicos y
+                relatos
+                que dieron forma a su cosmovisión.
+            </p>
+            <p>
+                <h4 id="LugaresYCosmologia">Lugares Miticos y Cosmología</h4>
+                La mitología griega es una de las más influyentes de la historia, con relatos que explican el origen del
+                mundo, la vida y la naturaleza humana. Basada en un vasto panteón de dioses olímpicos liderados por
+                Zeus,
+                estas historias fueron plasmadas en obras como la Ilíada y la Odisea. Los griegos creían en la
+                intervención
+                de los dioses en los asuntos humanos y en la existencia de criaturas legendarias, héroes épicos y
+                relatos
+                que dieron forma a su cosmovisión.
+            </p>
+            <p>
+                <h4 id="HeroesYLeyendas">Influencia en la Cultura Actual</h4>
                 La mitología griega es una de las más influyentes de la historia, con relatos que explican el origen del
                 mundo, la vida y la naturaleza humana. Basada en un vasto panteón de dioses olímpicos liderados por
                 Zeus,
@@ -48,7 +125,7 @@
         <aside class="sidebar">
             <h3>Artículos Recientes</h3>
             <ul>
-                <li><a href="#">La influencia de la mitología en la cultura popular</a></li>
+                <li><a href="#Introduccion">La influencia de la mitología en la cultura popular</a></li>
                 <li><a href="#">Los dioses y héroes de la mitología griega</a></li>
                 <li><a href="#">Los mitos nórdicos y su impacto en la literatura</a></li>
                 <li><a href="#">La mitología egipcia y sus misterios</a></li>
