--- a/MitologiaGriega.html
+++ b/MitologiaGriega.html
@@ -59,7 +59,7 @@
                 <p>Los dioses griegos eran antropomórficos y poseían características humanas, con virtudes y defectos. Entre los más importantes destacan:</p>
 
                 <section class="fotos-dioses">    
-                    <p><b>Zeus:</b> Dios del cielo y el trueno, rey del Olimpo. Hijo de Cronos y Rea, Zeus lideró la rebelión de los dioses olímpicos contra los titanes, liberando a sus hermanos y estableciendo su dominio en el Monte Olimpo. Es conocido por sus múltiples amoríos con diosas y mortales, lo que dio origen a numerosos semidioses como Heracles y Perseo. Su arma principal es el rayo, y es representado como un hombre maduro con barba y un cetro.
+                    <p class="primero"><b>Zeus:</b> Dios del cielo y el trueno, rey del Olimpo. Hijo de Cronos y Rea, Zeus lideró la rebelión de los dioses olímpicos contra los titanes, liberando a sus hermanos y estableciendo su dominio en el Monte Olimpo. Es conocido por sus múltiples amoríos con diosas y mortales, lo que dio origen a numerosos semidioses como Heracles y Perseo. Su arma principal es el rayo, y es representado como un hombre maduro con barba y un cetro.
                     <img src="./images/zeus.jpg" alt="Zeus"></p>
                 
                     <p><b>Hera:</b> Diosa del matrimonio y la familia, esposa de Zeus. Aunque es la reina del Olimpo, su matrimonio con Zeus estuvo marcado por la infidelidad de su esposo, lo que la llevó a tomar venganza contra sus amantes y sus hijos ilegítimos. Era la protectora de las mujeres casadas y castigó duramente a figuras como Heracles y Leto. Su símbolo es el pavo real y es representada con una diadema y un cetro.
@@ -97,14 +97,14 @@
             <h3 id="CriaturasYSeres">Criaturas y Seres Mitologicos </h3>
             Los mitos griegos están llenos de seres fantásticos, como: <br>
             <section class="fotos-criaturas">
-                <p>Minotauro: Mitad hombre, mitad toro, habitante del laberinto de Creta.</p>
-                <img src="./images/zeus.jpg" alt="Zeus">
-                <p>Cíclopes: Gigantes de un solo ojo, forjadores de las armas divinas.</p>
-                <img src="./images/zeus.jpg" alt="Zeus">
-                <p>Medusa: Gorgona con serpientes en la cabeza, capaz de petrificar con la mirada.</p>
-                <img src="./images/zeus.jpg" alt="Zeus">
+                <p>Minotauro: Mitad hombre, mitad toro, habitante del laberinto de Creta.
+                <img src="./images/zeus.jpg" alt="Zeus"></p>
+                <p>Cíclopes: Gigantes de un solo ojo, forjadores de las armas divinas.
+                <img src="./images/zeus.jpg" alt="Zeus"></p>
+                <p>Medusa: Gorgona con serpientes en la cabeza, capaz de petrificar con la mirada.
+                <img src="./images/zeus.jpg" alt="Zeus"></p>
                 
-            Quimera: Criatura con cabeza de león, cuerpo de cabra y cola de serpiente. <br>
+            <p>Quimera: Criatura con cabeza de león, cuerpo de cabra y cola de serpiente.</p>
 
             Hidra de Lerna: Serpiente de múltiples cabezas que se regeneraban al ser cortadas. <br>
 
