--- a/index.html
+++ b/index.html
@@ -25,47 +25,114 @@
         <a href="./MitologiaJaponesa.html">Mitologia Japonesa</a>
     </nav>
 
+    <h3>Introducción</h3>
+    <p class="intro">
+        La mitología es un elemento fundamental en todas las civilizaciones del mundo. A través de relatos transmitidos
+        de generación en generación, las culturas han intentado explicar el origen del universo, el papel de los dioses
+        y la naturaleza de la existencia humana. Aunque cada cultura ha desarrollado su propia mitología, muchas
+        comparten patrones comunes, lo que refleja la necesidad universal de comprender el mundo a través de historias
+        divinas y heroicas.
+
+        A continuación, exploraremos las mitologías más influyentes en la historia de la humanidad: la griega, la
+        nórdica, la egipcia, la romana y la japonesa. Cada una de ellas posee características únicas, con panteones de
+        dioses poderosos, criaturas fantásticas y héroes cuyas hazañas han perdurado a lo largo del tiempo.</p>
+
+    <h3>Mitología Griega</h3>
     <p class="intro">
 
-        Bienvenido a un viaje mágico por las mitologías del mundo <br> <br>
+        La mitología griega es una de las más conocidas y estudiadas debido a su influencia en la literatura, el arte y
+        la filosofía occidental. Se originó en la Antigua Grecia y fue transmitida principalmente de forma oral antes de
+        ser registrada en textos como "La Ilíada" y "La Odisea" de Homero, así como "La Teogonía" de Hesíodo.
 
-        Desde tiempos inmemoriales, la humanidad ha buscado explicaciones para los misterios del universo a través
-        de historias llenas de dioses poderosos, criaturas fantásticas y héroes legendarios. En esta web, te
-        invitamos a sumergirte en el fascinante mundo de cinco de las mitologías más impactantes de la historia: la
-        griega, la azteca, la nórdica, la japonesa y la egipcia. <br> <br>
+        Los mitos griegos explicaban la creación del mundo a través de los titanes y los dioses olímpicos, quienes
+        gobernaban distintos aspectos de la naturaleza y la vida humana. Zeus, Poseidón y Hades eran los dioses
+        supremos, mientras que Atenea, Apolo, Artemisa y Afrodita desempeñaban roles cruciales en diversos mitos. La
+        interacción entre dioses y mortales era constante, dando lugar a historias fascinantes como la de Prometeo, el
+        robo del fuego y la guerra de Troya.
 
-        Cada una de estas culturas nos ha legado relatos épicos que han trascendido el tiempo, inspirando
-        incontables obras de arte, literatura y cine. Descubre los dioses del Olimpo griego y sus intrigas divinas,
-        desde la majestuosidad de Zeus hasta la astucia de Hermes, pasando por los héroes como Heracles y Perseo,
-        cuyas hazañas se han convertido en símbolos de valentía y resistencia. <br> <br>
+        Los héroes también ocupaban un lugar destacado en la mitología griega. Figuras como Heracles, Perseo y Teseo
+        enfrentaban desafíos épicos y monstruos temibles como la Hidra de Lerna, la Medusa y el Minotauro. Estas
+        historias no solo entretenían, sino que también transmitían valores como la valentía, la astucia y el
+        sacrificio.</p>
 
-        Adéntrate en el esplendor y los sacrificios de la civilización azteca, donde Quetzalcóatl, Huitzilopochtli y
-        Tláloc guiaban la vida y los ritos de una sociedad que dominó Mesoamérica. Conoce sus profecías, sus dioses
-        guerreros y el sentido profundo que le daban al destino y la muerte. <br> <br>
+    <h3>Mitología Nórdica</h3>
+    <p class="intro">
 
-        Siente la fuerza de los guerreros vikingos y los poderosos aesir, con Odín, Thor y Loki entre los
-        protagonistas de una cosmovisión donde el Ragnarök se alza como la última batalla. Explora las tradiciones
-        de los escandinavos, su forma de entender el honor y su profunda relación con la naturaleza y la magia. <br>
-        <br>
+        La mitología nórdica proviene de los pueblos germánicos del norte de Europa, en particular de los vikingos. Sus
+        relatos fueron preservados en los "Eddas", textos medievales escritos en Islandia. A diferencia de la mitología
+        griega, que presenta un cosmos ordenado, la mitología nórdica describe un universo caótico donde el destino es
+        inmutable y los dioses mismos están condenados a perecer en el Ragnarök, la batalla final.
 
-        Maravíllate con la elegancia de los kami japoneses, donde Amaterasu, Susanoo e Izanagi protagonizan
-        historias de creación y equilibrio. Descubre el shintoísmo, la espiritualidad en los mitos japoneses y la
-        relación entre lo divino y lo cotidiano en su cultura ancestral. <br> <br>
+        El panteón nórdico está dominado por figuras como Odín, el dios supremo asociado con la sabiduría y la guerra;
+        Thor, el dios del trueno y protector de la humanidad; y Loki, un ser astuto y ambiguo, capaz de causar tanto el
+        bien como el mal. Estos dioses habitan en Asgard, mientras que los humanos residen en Midgard y los gigantes en
+        Jotunheim.
 
-        Explora el enigmático panteón de los faraones egipcios, donde Ra, Osiris, Isis y Anubis rigen el destino de
-        la vida y la muerte. Sumérgete en los mitos de la creación, el juicio del alma y el viaje hacia el más allá,
-        elementos fundamentales de una civilización que dominó el Nilo por milenios. <br> <br>
+        Las criaturas míticas nórdicas incluyen dragones como Fafnir, lobos gigantes como Fenrir y serpientes colosales
+        como Jörmungandr. Los vikingos creían en la importancia de la valentía en la batalla, ya que aquellos que morían
+        con honor eran llevados al Valhalla, donde se preparaban para luchar junto a los dioses en el Ragnarök.</p>
 
-        Estas leyendas no solo han definido culturas, sino que también han dejado huella en nuestra percepción del
-        mundo y en la imaginación colectiva. Mitos y relatos que han inspirado epopeyas, filosofías y formas de ver
-        la vida que perviven hasta el día de hoy. <br> <br>
+    <h3>Mitología Egipcia</h3>
+    <p class="intro">
 
-        ¡Prepárate para conocer leyendas que desafían la imaginación y mitos que han dado forma a las creencias y
-        tradiciones de civilizaciones enteras! Estás a punto de embarcarte en una aventura inolvidable a través del
-        tiempo y la fantasía. <br> <br>
+        La mitología egipcia es una de las más antiguas y se desarrolló a lo largo de más de 3,000 años. Estaba
+        profundamente entrelazada con la religión y la vida cotidiana del Antiguo Egipto, influenciando sus templos,
+        rituales y creencias sobre la vida después de la muerte.
 
-        ¡Bienvenido a un mundo donde los dioses caminan entre los hombres y las leyendas nunca mueren!
+        Los egipcios creían en un cosmos dividido en tres reinos: la tierra (Egipto), el cielo (donde gobernaba Ra, el
+        dios del sol) y el inframundo (el Duat, gobernado por Osiris). Entre los dioses principales destacan Isis, diosa
+        de la maternidad y la magia; Anubis, el dios con cabeza de chacal encargado de guiar a los muertos; y Seth, el
+        dios del caos y la guerra.
+
+        Uno de los mitos más importantes es el de Osiris, quien fue asesinado y desmembrado por su hermano Seth, pero
+        posteriormente revivido por Isis. Su hijo, Horus, vengó su muerte y estableció el linaje de los faraones. Este
+        relato simbolizaba el ciclo de la vida, la muerte y la resurrección, un concepto central en la religión egipcia.
+
+        Los egipcios también temían y veneraban criaturas como la esfinge y el Ammit, un ser híbrido que devoraba las
+        almas de los impuros en el juicio final.</p>
+
+    <h3>Mitología Romana</h3>
+    <p class="intro">
+
+        La mitología romana tiene una gran influencia de la griega, ya que los romanos adoptaron muchos de sus dioses y
+        mitos, pero les dieron nombres latinos y los incorporaron a su propia cultura. Así, Zeus se convirtió en
+        Júpiter, Hera en Juno, Poseidón en Neptuno y Ares en Marte.
+
+        Sin embargo, los romanos tenían una visión más práctica de la religión y usaban sus mitos para reforzar la
+        grandeza de su imperio. La historia de Rómulo y Remo, por ejemplo, explica el origen mítico de Roma y enfatiza
+        el destino manifiesto de la ciudad como la dominadora del mundo.
+
+        Los dioses romanos estaban asociados a valores como la disciplina, la guerra y la expansión territorial. Marte,
+        el dios de la guerra, era particularmente importante debido al carácter militarista de Roma. Además, los
+        emperadores fueron divinizados tras su muerte, consolidando la conexión entre la religión y el poder político.
     </p>
+
+    <h3>Mitología Japonesa</h3>
+    <p class="intro">
+
+        La mitología japonesa proviene principalmente del "Kojiki" y el "Nihon Shoki", textos históricos que recopilan
+        los mitos del antiguo Japón. A diferencia de otras mitologías, en la japonesa los dioses, conocidos como "kami",
+        están estrechamente ligados a la naturaleza y al ciclo de la vida.
+
+        El mito de la creación japonesa cuenta cómo los dioses primordiales Izanagi e Izanami formaron el archipiélago
+        japonés. Tras la muerte de Izanami, Izanagi descendió al inframundo (Yomi) y al regresar purificó su cuerpo,
+        dando origen a Amaterasu (diosa del sol), Tsukuyomi (dios de la luna) y Susanoo (dios de las tormentas).
+
+        Amaterasu es la diosa más venerada de Japón, y se cree que los emperadores japoneses son sus descendientes
+        directos. Susanoo, en cambio, es famoso por su lucha contra la serpiente de ocho cabezas Yamata-no-Orochi, a la
+        que derrotó con su espada mágica Kusanagi.
+
+        La mitología japonesa también incluye numerosas criaturas y espíritus, como los yokai, seres sobrenaturales que
+        pueden ser traviesos o peligrosos, y los tengu, guardianes de las montañas con aspecto de aves.</p>
+
+    <h3>Conclusión</h3>
+    <p class="intro">
+
+        Cada mitología ofrece una visión única del universo, con dioses poderosos, héroes valientes y relatos
+        fascinantes que han perdurado hasta la actualidad. Aunque las culturas sean diferentes, sus mitos reflejan una
+        necesidad común de explicar el mundo y darle un sentido trascendental a la existencia humana. Hoy en día, estas
+        historias siguen vivas en la literatura, el cine, los videojuegos y la cultura popular, demostrando su impacto
+        duradero en la civilización humana.</p>
     <div class="content">
         <section id="griega">
             <h2>Mitología Griega</h2>
@@ -97,12 +164,13 @@
 
         <section id="romana">
             <h2>Mitología Romana</h2>
-            <p>Una mitología profundamente ligada a la naturaleza y la guerra, donde dioses como Huitzilopochtli y
-                Quetzalcóatl marcan el destino de los hombres. Su cosmovisión giraba en torno a sacrificios y
-                profecías que daban sentido a su existencia.
-                <a href="./MitologiaRomana.html">Leer mas...</a>
+            <p>Una mitología influenciada por la griega, pero con un fuerte sentido de orden y destino, donde dioses
+                como Júpiter, Marte y Venus regían la vida de los hombres y el destino del Imperio. Sus relatos estaban
+                ligados a la expansión, la guerra y la grandeza de Roma, reflejando la disciplina y el poder de su
+                civilización.
+                <a href="./MitologiaRomana.html">Leer más...</a>
             </p>
-            <img src="./images/Dioses-Romanos.jpg" class="imagen-principal" alt="Quetzalcóatl" />
+            <img src="./images/Dioses-Romanos.jpg" class="imagen-principal" alt="Dioses-Romanos" />
         </section>
 
         <section id="japonesa">
@@ -116,12 +184,6 @@
             <img src="./images/Amaterasu_cave_1.png" class="imagen-principal" alt="Amaterasu" />
         </section>
     </div>
-    </p>
-
-    </section>
-    </div>
-
-    </main>
     <footer>
         <p class="pie-pagina">&copy; 2025 Mitología del Mundo. Todos los derechos reservados.</p>
     </footer>
