--- a/index.html
+++ b/index.html
@@ -60,7 +60,10 @@
             Los héroes también ocupaban un lugar destacado en la mitología griega. Figuras como Heracles, Perseo y Teseo
             enfrentaban desafíos épicos y monstruos temibles como la Hidra de Lerna, la Medusa y el Minotauro. Estas
             historias no solo entretenían, sino que también transmitían valores como la valentía, la astucia y el
-            sacrificio.</p>
+            sacrificio. <br>
+            <img src="./images/zeus.jpg" class="imagenes-grandes" alt="Zeus" />
+        </p>
+            
 
         <h3>Mitología Nórdica</h3>
         <p class="intro">
