--- a/html/index.html
+++ b/html/index.html
@@ -18,6 +18,7 @@
 
   <link href="../assets/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="../dist/css/bootstrap.min.css">
+  <link rel="stylesheet" href="./estilos.css">
 
   <style>
     .header {
@@ -174,7 +175,7 @@
           <img class="header" src="../images/pruebaa.png" alt="">
           <div class="container">
             <div class="carousel-caption text-start">
-              <h1>Example headline.</h1>
+              <h1>Mitologias del Mundo.</h1>
               <p class="opacity-75">Some representative placeholder content for the first slide of the carousel.</p>
               <p><a class="btn btn-lg btn-primary" href="#">Sign up today</a></p>
             </div>
@@ -194,7 +195,7 @@
           <img class="header" src="../images/pruebaa.png" alt="">
           <div class="container">
             <div class="carousel-caption text-end">
-              <h1>One more for good measure.</h1>
+              <h1>Mitologias del Mundo.</h1>
               <p>Some representative placeholder content for the third slide of this carousel.</p>
               <p><a class="btn btn-lg btn-primary" href="#">Browse gallery</a></p>
             </div>
@@ -267,13 +268,7 @@
             perdurado a lo largo de los siglos. <a href="./MitologiaGriega.html">Leer mas...</a></p></p>
         </div>
         <div class="col-md-5">
-          <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500"
-            height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500"
-            preserveAspectRatio="xMidYMid slice" focusable="false">
-            <title>Placeholder</title>
-            <rect width="100%" height="100%" fill="var(--bs-secondary-bg)" /><text x="50%" y="50%"
-              fill="var(--bs-secondary-color)" dy=".3em">500x500</text>
-          </svg>
+          <img class="imagenes-landing" src="../images/zeus.jpg" alt="">
         </div>
       </div>
 
@@ -282,11 +277,13 @@
       <div class="row featurette">
         <div class="col-md-7 order-md-2">
           <h2 class="featurette-heading fw-normal lh-1">Mitologia Nordica</h2>
-          <p class="lead">Another featurette? Of course. More placeholder content here to give you an idea of how this
-            layout would work with some actual real-world content in place.</p>
+          <p class="lead">Forjada en el frío y la batalla, esta mitología narra la historia de dioses guerreros como Odín y
+            Thor, quienes luchan contra fuerzas caóticas hasta el inevitable Ragnarök, el fin del mundo y su
+            renacimiento.
+            <a href="./MitologiaNordica.html">Leer mas...</a></p>
         </div>
         <div class="col-md-5 order-md-1">
-          <img src="../images/zeus.jpg" alt="">
+          <img class="imagenes-landing" src="../images/thor.jpg" alt="">
         </div>
       </div>
 
@@ -295,12 +292,13 @@
       <div class="row featurette">
         <div class="col-md-7">
           <h2 class="featurette-heading fw-normal lh-1">Mitologia Egipcia</h2>
-          <p class="lead">And yes, this is the last block of representative placeholder content. Again, not really
-            intended to be actually read, simply here to give you a better view of what this would look like with some
-            actual content. Your content.</p>
+          <p class="lead">Los antiguos egipcios creían en muchos dioses y diosas, siendo Osiris el dios de la resurrección y la
+            vida
+            después de la muerte. Isis, su esposa, era la diosa de la magia.
+            <a href="./MitologiaEgipcia.html">Leer mas...</a></p>
         </div>
         <div class="col-md-5">
-          <img src="../images/Dioses-Romanos.jpg" alt="">
+          <img class="imagenes-landing" src="../images/Osiris.jpg" alt="">
         </div>
       </div>
 
@@ -310,11 +308,15 @@
       <div class="row featurette">
         <div class="col-md-7 order-md-2">
           <h2 class="featurette-heading fw-normal lh-1">Mitologia Romana</h2>
-          <p class="lead">Another featurette? Of course. More placeholder content here to give you an idea of how this
-            layout would work with some actual real-world content in place.</p>
+          <p class="lead">Una mitología influenciada por la griega, pero con un fuerte sentido de orden y destino, donde dioses
+            como Júpiter, Marte y Venus regían la vida de los hombres y el destino del Imperio. Sus relatos
+            estaban
+            ligados a la expansión, la guerra y la grandeza de Roma, reflejando la disciplina y el poder de su
+            civilización.
+            <a href="./MitologiaRomana.html">Leer más...</a></p>
         </div>
         <div class="col-md-5 order-md-1">
-          <img src="../images/zeus.jpg" alt="">
+          <img class="imagenes-landing" src="../images/Dioses-Romanos.jpg" alt="">
         </div>
       </div>
 
@@ -330,7 +332,7 @@
             visión del equilibrio natural. <br><a href="./MitologiaJaponesa.html">Leer mas...</a></p>
         </div>
         <div class="col-md-5">
-          <img src="../images/Dioses-Romanos.jpg" alt="">
+          <img class="imagenes-landing" src="../images/Amaterasu_cave_1.png" alt="">
         </div>
       </div>
 
